# tiny-weather-alert

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  ruff.toml  setup.sh
.github/workflows/: ci.yml
tests/: test_core.py
weather_alert/: core.py
