[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-weather-alert"
version = "0.1.0"
description = "Minimal CLI that fetches weather and sends a Telegram alert"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "TopherBot", email = "topherbot@proton.me"}]

[project.scripts]
weather-alert = "weather_alert.core:run"
